# tree-sitter-go-wasm-repro

./: Cargo.toml  README.md
src/: lib.rs
tests/: wasm.rs
